--- a/index.html
+++ b/index.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="jaredFayeWedding.css">
-    <title>Jared and Faye</title>
+    <title>JaredFaye Wedding Gallery</title>
+
+
+    <style>
+       @import url('https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital@0;1&family=Satisfy&display=swap');
+    </style>
+    <link rel="icon" type="image/png" href="displayImages/logo2.png">
 </head>
 <body>
-    <div class="header__container" id="header">
-        <div class="header__image" id="header__image"><img src="jaredFayeWeddingImages/MAT08695.JPG" alt="header image"></div>
-        <div class="header__title">Jared and Faye</div>
-        <div class="header__content">On September 9, 2023, our hearts became one, and we promised to be together in our heart, mind, and soul.</div>
-    </div>
+    <div class="home">
+        <div class="header">
+            <p class="header1">Jared and Faye</p>
+            <p class="header2">Our Wedding Gallery</p>    
+        </div>
+        <div class="home-image-container">
+            <img class="home-image" src="displayImages/MAT06389.JPG" alt="Wedding picture">
+        </div>
+    </div> 
+        
 
-    <div class="letter__container" id="letter">
-        <div class="letter__image" id="letter__image"><img src="jaredFayeWeddingImages/MAT08695.JPG" alt="header image"></div>
-        <div class="letter__title">Our Love Story</div>
-        <div class="letter__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem necessitatibus quae corporis similique nihil laborum repellendus deserunt, reprehenderit soluta odit. Quo fuga nemo libero consequuntur nobis dignissimos inventore corrupti blanditiis.</div>
-    </div>
-
-
-    <div class="prenup__container" id="prenup"></div>
-    <div class="wedding__container" id="wedding"></div>
-    <div class="sugar__container" id="sugar"></div>
-
-    <footer></footer>
+    
 </body>
+<footer>
+
+</footer>
 </html>
